initial support for https://pds-ppi.igpp.ucla.edu/data/JNO-J_SW-JAD-5-CALIBRATED-V1.0/DATA/2016/2016240/ELECTRONS/JAD_L50_LRS_ELC_ANY_DEF_2016240_V01.LBL
git-svn-id: https://svn.code.sf.net/p/autoplot/code/autoplot/trunk@27451 0c594bb0-8543-0410-a25e-d8ec440261db